samples/_failures_safe/1761362240_fa7d0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63568672.c: In function ‘main’:
./samples/SAFE/__tmp_63568672.c:144:16: error: missing terminating " character
  144 |         printf("No valid words found in input.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63568672.c:144:9: error: expected expression at end of input
  144 |         printf("No valid words found in input.\n
      |         ^~~~~~
./samples/SAFE/__tmp_63568672.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63568672.c:144:9: error: expected declaration or statement at end of input
